# fs-mcp

./: CHANGELOG.md  Cargo.toml  README.md  schema.json
.github/workflows/: ci.yaml  release.yml
src/: main.rs  session.rs  state.rs  tests.rs  tools.rs  traits.rs  types.rs
src/tools/: delete.rs  delete_file.rs  list.rs  list_directory.rs  move.rs  move_file.rs  read.rs  search.rs  set_context.rs  set_working_directory.rs  write.rs  write_file.rs
