[package]
name = "fs-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"
ignore = "0.4"
dirs = "6.0"
tempfile = "3.0"
pathdiff = "0.2.3"
fieldwork = "0.3.0"
schemars = "1.0.0-rc.2"
shellexpand = "3.1.1"
size = "0.5.0"
timeago = "0.4.2"
env_logger = "0.11.8"
log = "0.4.27"
fastrand = "2.3.0"

