[package]
name = "fs-mcp"
version = "0.1.2"
edition = "2024"
description = "mcp server for filesystem access"
readme = "README.md"
repository = "https://github.com/jbr/fs-mcp"
documentation = "https://docs.rs/fs-mcp"
license = "MIT OR Apache-2.0"
keywords = ["mcp"]
categories = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
env_logger = "0.11.8"
fastrand = "2.3.0"
fieldwork = "0.4.6"
glob = "0.3"
grep = "0.3.2"
ignore = "0.4"
log = "0.4.27"
mcplease = "0.2.3"
pathdiff = "0.2.3"
regex = "1.11"
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.1"
size = "0.5.0"
tempfile = "3.20"
timeago = "0.5.0"
